--- a/style.css
+++ b/style.css
@@ -23,8 +23,7 @@ header h1{
 }
 header img{
  height: 20px;
+ position: relative;
  float: left;
-}
-header a:active{
- transform:rotate(90deg) ;
+ 
 }
