--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+*{
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  box-sizing: border-box;
+}
 @font-face{
   font-family:title;
   src:url(fonts/CFGlitchCity-Regular.ttf);
@@ -9,26 +16,26 @@ body{
 }
 header{
   margin:0;
-  background-color:red;
-  padding:20px;
+  background-color:rgb(54, 114, 224);
+  height: 80px;
 }
-header h1{
-  font-family: title;
-    color: white;
-    text-align: center;
-    margin: 0;
-    font-size: 18px; 
-    position: relative;
+.logo{
+  text-align: center;
+  position: relative;
+  background-image: url(gamerpro.png);
+  background-repeat: no-repeat;
+  background-size: 300px;
+  background-position:center;
+  line-height: 80px;
+  padding: 200px;
+}
 
+header ul{
+  font-family: Arial, Helvetica, sans-serif;
+  float: right;
+  margin-right: 20px;
 }
-header img{
- height: 20px;
- margin: 0;
- float: left;
-}
-header img:active {
-  height: 20px;
-  position: absolute;
-  transform: rotate(90deg);
-  
+header ul li{
+  display: inline-block;
+  line-height: 80px;
 }
