--- a/style.css
+++ b/style.css
@@ -19,17 +19,6 @@ header{
   background-color:rgb(54, 114, 224);
   height: 80px;
 }
-.logo{
-  text-align: center;
-  position: relative;
-  background-image: url(gamerpro.png);
-  background-repeat: no-repeat;
-  background-size: 300px;
-  background-position:center;
-  line-height: 80px;
-  padding: 200px;
-}
-
 header ul{
   font-family: Arial, Helvetica, sans-serif;
   float: right;
@@ -38,4 +27,5 @@ header ul{
 header ul li{
   display: inline-block;
   line-height: 80px;
+  margin-right: 10px;
 }
