--- a/style.css
+++ b/style.css
@@ -12,20 +12,38 @@
 
 body{
   margin:0;
-  background: wheat;
+  background: white;
 }
 header{
   margin:0;
-  background-color:rgb(54, 114, 224);
-  height: 80px;
+  background-color:rgb(255, 255, 255);
+  height: 100px;
+  filter: drop-shadow(0px 1px 10px gray)
 }
 header ul{
-  font-family: Arial, Helvetica, sans-serif;
-  float: right;
-  margin-right: 20px;
+  font-family: 'Aldrich', Arial, Helvetica, sans-serif;
+  position: relative;
+  text-align: center;
 }
 header ul li{
+  display:inline-block ;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+header .logo a{
+  background-image: url(gamerpro.png);
+  background-size: 180px;
+  background-repeat: no-repeat;
+  height: 60px;
   display: inline-block;
-  line-height: 80px;
-  margin-right: 10px;
+  text-indent: -9999999px;
+  width: 200px;
+  position: relative;
+  top:-15px;
+
+}
+header .logo{
+  position: relative;
+  text-align: center;
 }
