--- a/style.css
+++ b/style.css
@@ -50,8 +50,9 @@ header .logo{
 @media screen and (max-width: 800px){
   header ul li{
     display:inline-block;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
+    font-size: 14px;
   }
   
 }
