--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ header .logo{
     margin-left: 5px;
     margin-right: 5px;
     font-size: 14px;
+    font-family: 'Aldrich', Arial, Helvetica, sans-serif;
   }
   
 }
