--- a/style.css
+++ b/style.css
@@ -56,6 +56,11 @@ header ul li a:hover{
   border-bottom: 1px solid black;
   padding-bottom:10px;
 }
+section{
+  overflow:hidden;
+  height: 650px;
+  width: 100%;
+}
 img{
   width: 20%;
   float: left;
