--- a/style.css
+++ b/style.css
@@ -16,10 +16,15 @@ body{
   background: white;
 }
 header{
+  z-index: +1;
+  top:0;
+  position: fixed;
+  width: 100%;
+  overflow: hidden;
   margin:0;
   background-color:rgb(255, 255, 255);
   height: 100px;
-  filter: drop-shadow(0px 1px 10px gray)
+  filter: drop-shadow(0px 0.5px 5px gray)
 }
 header ul{
   font-family: 'Aldrich', Arial, Helvetica, sans-serif;
@@ -57,9 +62,11 @@ header ul li a:hover{
   padding-bottom:10px;
 }
 section{
+  position: relative;
   overflow:hidden;
-  height: 650px;
+  height: 10000px;
   width: 100%;
+  top:100px;
 }
 img{
   width: 20%;
