--- a/style.css
+++ b/style.css
@@ -56,21 +56,26 @@ header .logo{
 }
 header ul li a{
   color:black;
+  position: relative;
 
 }
-header ul li a:hover{
-  animation: hover 2s ease-in-out;
-  border-bottom: 1px solid black;
-  padding-bottom:10px;
+header ul li a::after{
+content: '' ;
+position:absolute;
+width: 100%;
+height: 3px;
+background-color: black;
+bottom: 0;
+left: 0;
+top:30px;
+transform: scale(0,1);
+transition: transform 0.3s ease;
 }
-@keyframes hover{
-  0%{
-    border-bottom: ;
-  }
-  100%{
-    border-bottom: black;
-  }
+header ul li a:hover::after{
+  transform: scale(1,1);
+
 }
+
 section{
   position: relative;
   overflow:hidden;
