--- a/style.css
+++ b/style.css
@@ -127,12 +127,13 @@ animation: 20s slider infinite;
   position: relative;
   text-align: center;
   margin-top: 50px;
+ 
 }
 .news1 img{
   height: 100%;
 }
 .news1 h1{
-  color:red;
+  color: black;
   position: relative;
   
 }
