--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
   background: white;
 }
 header{
- 
+ z-index: +1;
   top:0;
   position: fixed;
   width: 100%;
@@ -127,7 +127,8 @@ animation: 20s slider infinite;
   position: relative;
   text-align: center;
   margin-top: 50px;
- 
+ border: 5px solid skyblue;
+ display: inline-block;
 }
 .news1 img{
   height: 100%;
