--- a/style.css
+++ b/style.css
@@ -126,11 +126,12 @@ animation: 20s slider infinite;
   display: inline-block;
   position: relative;
   text-align: center;
+  width: 100%;
 }
 .news1{
   display: inline-block;
-  height:200px;
-  margin-top: 50px;
+  height: 500px;
+  margin: 100px;
  border: 5px solid skyblue;
  position: relative;
 }
@@ -142,6 +143,7 @@ animation: 20s slider infinite;
   position: relative;
   
 }
+.all 
 
 
 
