--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 body{
   margin:0;
   background: white;
+  
 }
 header{
  z-index: +1;
@@ -131,16 +132,16 @@ animation: 20s slider infinite;
 .news1{
   display: inline-block;
   height: 500px;
-  margin: 100px;
+  margin: 20px;
  border: 5px solid skyblue;
  position: relative;
 }
 .news1 img{
-  height: 100%;
+  height: 450px;
 }
 .news1 h1{
   color: black;
-  position: relative;
+  position: absolute;
   
 }
 
@@ -156,5 +157,8 @@ animation: 20s slider infinite;
   .news1{
     height: 200px;
     margin: 20px;
+  }
+  .news1 img{
+    height: 80%;
   }
 }  
