--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
   font-family:title;
   src:url(fonts/CFGlitchCity-Regular.ttf);
 }
+@font-face{
+  font-family:news;
+  src:url(Aldrich-Regular.ttf);
+}
 body{
   margin:0;
   background: white;
@@ -123,25 +127,32 @@ animation: 20s slider infinite;
     left:-300%;
   }
 }
+.slider div{
+  position: absolute;
+  z-index: +1;
+  color: white;
+  margin-top: 5%;
+  font-size: 80px;
+}
 .all{
   display: inline-block;
   position: relative;
   text-align: center;
   width: 100%;
+  font-family: 'news', Arial, Helvetica, sans-serif;
 }
 .news1{
   display: inline-block;
-  height: 500px;
-  margin: 20px;
- border: 5px solid skyblue;
+  margin-right:5% ;
+  margin-top: 100px;
  position: relative;
 }
 .news1 img{
-  height: 450px;
+  height: 200px;
 }
 .news1 h1{
   color: black;
-  position: absolute;
+  font-size: 130%;
   
 }
 
@@ -153,6 +164,7 @@ animation: 20s slider infinite;
     margin-left: 5px;
     margin-right: 5px;
     font-size: 14px;
+    font-family: 'Aldrich', Arial, Helvetica, sans-serif;
   }
   .news1{
     height: 200px;
