--- a/style.css
+++ b/style.css
@@ -143,16 +143,21 @@ hr{
 }
 .newstitle{
   font-family: 'news', Arial, Helvetica, sans-serif;
+  position: relative;
+  text-align: center;
+  
 }
-.imgover{
-  overflow: hidden;
+.image1{
   width: 250px;
-  height: 250px;
+  height: 310px;
+  margin: 60px 0px 10px 60px;
+  position: relative;
+  overflow: hidden;
 }
 .newsimg{
+  position: relative;
   height: 250px;
-  text-align: center;
-  right: 50px;
+text-align: center;
 }
 
 
