--- a/style.css
+++ b/style.css
@@ -150,16 +150,20 @@ hr{
 .image1{
   width: 250px;
   height: 310px;
-  margin: 60px 0px 10px 60px;
+  margin: 60px 0px 10px 0px;
   position: relative;
   overflow: hidden;
+  text-align: center;
 }
 .newsimg{
   position: relative;
   height: 250px;
 text-align: center;
 }
-
+.imageall{
+  display: inline-block;
+  width: 100%;
+}
 
 
 @media screen and (max-width: 600px){
