--- a/style.css
+++ b/style.css
@@ -141,28 +141,18 @@ hr{
    font-family:headertitle;
    
 }
-.newstitle{
-  font-family: 'news', Arial, Helvetica, sans-serif;
-  position: relative;
-  text-align: center;
-  
-}
 .image1{
-  width: 250px;
-  height: 310px;
-  margin: 60px 0px 10px 0px;
-  position: relative;
-  overflow: hidden;
-  text-align: center;
+  display: block;
+  flex-direction: row;
+  padding: 20px;
+  float: left;
 }
-.newsimg{
-  position: relative;
-  height: 250px;
-text-align: center;
+.image1 figure{
+  margin: auto;
+  width: 200px;
 }
-.imageall{
-  display: inline-block;
-  width: 100%;
+.image1 figure img{
+  width: 200px;
 }
 
 
