--- a/style.css
+++ b/style.css
@@ -141,20 +141,22 @@ hr{
    font-family:headertitle;
    
 }
-.image1{
-  display: inline-flex;
-  flex-direction: row;
-  margin: 10%;
-  float: left;
-
-}
 .image1 figure{
-  width: 200px;
+  height: 150px;
+  width: 400px;
+  padding: 20px;
 }
-.image1 figure img{
-  width: 200px;
+ .image1 img{
+   width:130px;
+  float: left;
+  padding-right: 10px;
+   
+ }
+.image1 figure figcaption{
+  font-size: 20px;
+  display: inline;
+  
 }
-
 
 @media screen and (max-width: 600px){
 header{
