--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 
 *{
+ 
   text-decoration: none;
   margin: 0;
   padding: 0;
@@ -26,6 +27,7 @@
 body{
   margin:0;
   background: white;
+  
   
 }
 header{
@@ -62,6 +64,7 @@ header ul li{
   top:-15px;
   margin-left: 40px;
   outline: none;
+ 
 
 }
 header .logo{
@@ -161,13 +164,14 @@ padding: 20px;
    
  }
 .image1 figure figcaption{
-  font-size: 20px;
+  font-size: 22px;
   display: inline;
+   font-family:headertitle;
   
 }
 .image1 figure div{
   font-size: 15px;
-   font-family:description;
+   font-family: Arial, Helvetica, sans-serif;
    color: blue;
   
 }
@@ -182,7 +186,6 @@ header{
   top:0;
   position: fixed;
   width: 100%;
-  overflow: hidden;
   margin:0;
   background-color:rgb(255, 255, 255);
   height: 80px;
