--- a/style.css
+++ b/style.css
@@ -96,13 +96,12 @@ header ul li a:hover::after{
 .slider{
   position: relative;
   overflow: hidden;
-  height: 100%;
   width: 100%;
   margin-top: 100px;
 
 }
 .slider figure img{
-  width: 20%;
+  width:20% ;
   float: left;
   position: relative;
   
@@ -142,8 +141,9 @@ animation: 20s slider infinite;
 
 .t1{
   text-align: center;
-  margin: 30px 50px 30px 50px;
-   font-family:headertitle;
+  margin: 20px 10px 20px 10px;
+   font-family:news;
+   font-size: xx-large;
    
 }
 .newssection{
