--- a/style.css
+++ b/style.css
@@ -32,11 +32,10 @@ body{
 }
 header{
  z-index: +10;
-  top:0;
   position: fixed;
   width: 100%;
-  overflow: hidden;
   margin:0;
+  top: 0px;
   background-color:rgb(255, 255, 255);
   height: 100px;
   filter: drop-shadow(0px 0.5px 3px gray);
@@ -184,7 +183,7 @@ hr{
 }
 @media screen and (max-width: 600px){
 header{
-  height: 80px;
+height: 80px;
 }
  header ul li{
     display:inline-block;
